# broadcaster

./: .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  README.md  appveyor.yml  biome.json  flake.nix  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  gh-pages.yml  lint.yml  rust.yml  tauri-publish.yml
docs/fixtures/: get-broadcast.json
mock/: serve.js
sample-data/: deep-links.html
sample-data/generate/: add-broadcasts.ts  curl-pusher.sh  http-pusher.sh  index.ts  pusher.sh  random.sh  seed-logs.ts  tsconfig.json
sample-data/tournaments/tournament-1/: index.html  tournament.json
sample-data/tournaments/tournament-1/round-1/: game-1.pgn  game-2.pgn  games.pgn  index.json
sample-data/tournaments/tournament-1/round-2/: index.json
sample-data/tournaments/tournament-2/: tournament.json
sample-data/tournaments/tournament-2/round-1/: game-1.pgn  game-10.pgn  game-11.pgn  game-12.pgn  game-2.pgn  game-3.pgn  game-4.pgn  game-5.pgn  game-6.pgn  game-7.pgn  game-8.pgn  game-9.pgn  games.pgn  index.json
sample-data/tournaments/tournament-3/: game-1.pgn
sample-data/tournaments/tournament-3/nested/: game-2.pgn
sample-data/tournaments/tournament-3/nested/nested/: game-3.pgn
scripts/: release  updater.py
src/: App.vue  client.ts  const.ts  dates.ts  deep-links.ts  lichess.d.ts  main.ts  notify.ts  router.ts  styles.css  types.ts  updater.ts  upload.ts  uploader.ts  url.ts  utils.ts  watcher.ts
src-tauri/: Cargo.toml  config.toml.sample  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  oauth.rs  pgn.rs  sql.rs  utils.rs
src-tauri/templates/: redirect.html
src/components/: AddUserToSidebar.vue  Broadcast.vue  BroadcastDrawer.vue  BroadcastSummary.vue  BroadcastView.vue  Broadcasts.vue  BroadcastsByUser.vue  Dashboard.vue  FindBroadcast.vue  FolderWatcher.vue  Home.vue  LichessLogin.vue  LogViewer.vue  NavigateByUrl.vue  NewFolderSync.vue  NotFound.vue  Pagination.vue  Round.vue  RoundBoard.vue  RoundTimes.vue  Settings.vue  Stats.vue  UserAutocomplete.vue
src/stores/: broadcasts.ts  favorites.ts  logs.ts  queue.ts  settings.ts  status.ts  system.ts  user.ts  watcher.ts
tests/: dates.test.ts  deep-links.test.ts  upload.test.ts  url.test.ts  utils.test.ts  watcher.test.ts
updater/: version.json
