[package]
name = "broadcaster"
version = "0.0.0"
description = "Lichess Broadcaster"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
askama = "0.12.1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
oauth2 = "4.4.2"
open = "5.0.1"
serde_json = "1.0.111"
serde_urlencoded = "0.7.1"
tauri = { version = "2", features = [ "wry", "objc-exception", "devtools", "native-tls-vendored"], default-features = false }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tiny_http = "0.12.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.2.1"
tauri-plugin-updater = "2"
